# qr.decisionsciencecorp.com

./: .gitignore  COPYING.md  LICENSE-CC-BY-SA-4.0.md  README.md  agents.md
.githooks/: commit-msg  prepare-commit-msg
docs/: DEPLOY.md
public/: app.js  index.html  styles.css
public/api/v1/: generate.php  health.php  normalize.php  openapi.json
public/dev/: dev.css  docs-template.html  docs.php  index.php
public/dev/docs/: agents.md  api.md  index.md  licensing.md  sdk-php.md  sdk-python.md  smcp.md
public/includes/: api_helpers.php  config.php  markdown.php  qr_generate.php  qr_normalize.php
public/includes/lib/phpqrcode/: qrconfig.php
sdk/php/: QrStudioClient.php
sdk/python/: README.md  pyproject.toml
sdk/python/qr_studio/: __init__.py  client.py
smcp_plugin/qr_studio/: __init__.py  cli.py
tests/: api_smoke.py  design_smoke.py  dev_smoke.py
