[project]
name = "qr-studio-sdk"
version = "1.0.0"
description = "Python SDK for QR Code Studio API (AGPL-3.0)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }

[project.urls]
Homepage = "https://qr.decisionsciencecorp.com/dev/index.php"
Repository = "https://github.com/decisionsciencecorp/qr.decisionsciencecorp.com"

[tool.setuptools.packages.find]
where = ["."]
include = ["qr_studio*"]
